<resources>
    <string name="app_name">Game Box</string>

    <string name="loading">Loading %s %%</string>
    <string name="exit_game">Exit The Game</string>
    <string name="cancel">Cancel</string>
    <string name="sure_exit_game">Are you sure you want to leave?</string>
    <string name="game_controls">Game Controls</string>
    <string name="rotate_screen">Rotate Screen</string>
    <string name="shortcut">Add To Desktop</string>
    <string name="random_next_game">Random Next Game</string>
</resources>